I was having overflow on the body of my page earlier but now been fixed

--- a/public/Dashboard/dashboard.css
+++ b/public/Dashboard/dashboard.css
@@ -15,7 +15,7 @@ button {
 
 main {
     padding-top: 10vh;
-    height: 90vh;
+    height: 100vh;
 }
 
 nav {
@@ -28,15 +28,22 @@ nav {
 .middle,
 .right {
     width: 25%;
-    height: 100vh;
+    height: 90vh;
     background-color: rgb(24,25,26);
+}
+
+.left{
+    background-color: blue;
+}
+
+.right{
+    background-color: purple;
 }
 
 .middle {
     width: 50%;
-    height: 100vh;
     background-color: rgb(24, 25, 26);
-    /* background-color: red; */
+    background-color: red;
     padding-bottom: 10vh;
 }
 
@@ -86,20 +93,20 @@ nav {
 }
 
 #myPostModal {
-    height: 100vh;
+    height: 90vh;
     background-color: rgba(0, 0, 0, 0.664);
-    top: 10vh;
+    top: 0;
     left: 0;
     right: 0;
     z-index: 50;
 }
 
 #open-post-modal {
-    height: 75%;
+    height: 100%;
 }
 
 #write-post-modal {
-    height: 100%;
+    height: 80%;
     background-color: rgb(36,37,38);
 }
 
@@ -168,7 +175,7 @@ input {
 }
 
 ::-webkit-scrollbar{
-    display: none;
+    /* display: none; */
 }
 
 @media (max-width: 1115px) {
